# human_body_detection

./: CMakeLists.txt  package.xml  setup.py
launch/: human_body_detection_asus.launch  human_body_detection_asus_dshs_aufnahme.launch
scripts/: human_body_detection_node.py
